# ssc0952

./: .gitignore  README.md  compile_protobuf.sh  config.env  template.config.env  template.openssl.cnf
backend/: .env  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  openssl.cnf.template  pyproject.toml
backend/log/: src.iot.mqtt.txt  src.message.txt
backend/mosquitto/config/: mosquitto.conf
backend/scripts/: add_certificates.sh  add_mosquitto_user.sh  compile_protobuf.sh  mosquitto_add_user.sh  mosquitto_setup_certificates.sh  python_build.sh  python_run.sh  setup.sh  setup_certificates.sh
backend/src/: connection.py  database.py  main.py  message.py  messages.py  settings.py
backend/src/auth/: crud.py  routes.py
backend/src/database/: __init__.py  database.py  models.py
backend/src/iot/: mqtt.py  routes.py  schemas.py
microservice/: .gitignore  Dockerfile  README.md  pyproject.toml
microservice/kubernetes/: 0_internal_config.env  1_strimzi_install.yaml  2_kafka_persistent.yaml  2_kafka_persistent_single.yaml  3_topics.yaml  4_postgres.yaml  5_microservice_deployments.yaml  6_microservice_services.yaml
microservice/kubernetes/templates/: 0_app_config.yaml  4_postgres.yaml  5_microservice_deployments.yaml  6_microservice_services.yaml
microservice/log/: src.mqtt_kafka_bridge.mqtt.txt
microservice/scripts/: build_and_publish.sh  replace_kubernetes_variables.sh
microservice/src/db_event_persistence/measurement/: main.py
microservice/src/db_event_persistence/notification/: main.py
microservice/src/mqtt_kafka_bridge/: main.py
microservice/src/room_manager/: auth.py  main.py
microservice/src/room_manager/rooms/: crud.py  routes.py
microservice/src/shared/: settings.py  utils.py
microservice/src/web_message_streamer/: main.py
microservice/tests/esp_simulation/: notification.py
(+59 files in other folders)
